auth middleware bug fixed
