# src/docs/swagger.yaml
@@ -1,63 +1,5 @@
 definitions:
-  dto.GetOtpRequest:
-    properties:
-      mobileNumber:
-        maxLength: 11
-        minLength: 11
-        type: string
-    required:
-    - mobileNumber
-    type: object
-  dto.LoginByUsernameRequest:
-    properties:
-      password:
-        minLength: 6
-        type: string
-      username:
-        minLength: 6
-        type: string
-    required:
-    - password
-    - username
-    type: object
-  dto.RegisterLoginByMobileRequest:
-    properties:
-      mobileNumber:
-        maxLength: 11
-        minLength: 11
-        type: string
-      otp:
-        maxLength: 6
-        minLength: 6
-        type: string
-    required:
-    - mobileNumber
-    - otp
-    type: object
-  dto.RegisterUserByUsernameRequest:
-    properties:
-      email:
-        minLength: 6
-        type: string
-      firstName:
-        minLength: 3
-        type: string
-      lastName:
-        minLength: 6
-        type: string
-      password:
-        minLength: 6
-        type: string
-      username:
-        minLength: 5
-        type: string
-    required:
-    - firstName
-    - lastName
-    - password
-    - username
-    type: object
-  handlers.personData:
+  api_handlers.personData:
     properties:
       first_name:
         maxLength: 10
@@ -76,7 +18,147 @@ definitions:
     - last_name
     - mobile_number
     type: object
-  helper.BaseHttpResponse:
+  clean-web-api_api_dto.CityResponse:
+    properties:
+      country:
+        $ref: '#/definitions/clean-web-api_api_dto.CountryResponse'
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  clean-web-api_api_dto.CountryResponse:
+    properties:
+      cities:
+        items:
+          $ref: '#/definitions/clean-web-api_api_dto.CityResponse'
+        type: array
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
+  clean-web-api_api_dto.CreateUpdateCountryRequest:
+    properties:
+      name:
+        maxLength: 20
+        minLength: 3
+        type: string
+    required:
+    - name
+    type: object
+  clean-web-api_api_dto.Filter:
+    properties:
+      filterType:
+        description: text number
+        type: string
+      from:
+        type: string
+      to:
+        type: string
+      type:
+        description: contains notContains equals notEqual startsWith lessThan lessThanOrEqual
+          greaterThan greaterThanOrEqual inRange endsWith
+        type: string
+    type: object
+  clean-web-api_api_dto.GetOtpRequest:
+    properties:
+      mobileNumber:
+        maxLength: 11
+        minLength: 11
+        type: string
+    required:
+    - mobileNumber
+    type: object
+  clean-web-api_api_dto.LoginByUsernameRequest:
+    properties:
+      password:
+        minLength: 6
+        type: string
+      username:
+        minLength: 5
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  clean-web-api_api_dto.PagedList-clean-web-api_api_dto_CountryResponse:
+    properties:
+      hasNextPage:
+        type: boolean
+      hasPreviousPage:
+        type: boolean
+      items:
+        items:
+          $ref: '#/definitions/clean-web-api_api_dto.CountryResponse'
+        type: array
+      pageNumber:
+        type: integer
+      totalPages:
+        type: integer
+      totalRows:
+        type: integer
+    type: object
+  clean-web-api_api_dto.PaginationInputWithFilter:
+    properties:
+      filter:
+        additionalProperties:
+          $ref: '#/definitions/clean-web-api_api_dto.Filter'
+        type: object
+      pageNumber:
+        type: integer
+      pageSize:
+        type: integer
+      sort:
+        items:
+          $ref: '#/definitions/clean-web-api_api_dto.Sort'
+        type: array
+    type: object
+  clean-web-api_api_dto.RegisterLoginByMobileRequest:
+    properties:
+      mobileNumber:
+        maxLength: 11
+        minLength: 11
+        type: string
+      otp:
+        maxLength: 6
+        minLength: 6
+        type: string
+    required:
+    - mobileNumber
+    - otp
+    type: object
+  clean-web-api_api_dto.RegisterUserByUsernameRequest:
+    properties:
+      email:
+        minLength: 6
+        type: string
+      firstName:
+        minLength: 3
+        type: string
+      lastName:
+        minLength: 5
+        type: string
+      password:
+        minLength: 6
+        type: string
+      username:
+        minLength: 4
+        type: string
+    required:
+    - firstName
+    - lastName
+    - password
+    - username
+    type: object
+  clean-web-api_api_dto.Sort:
+    properties:
+      colId:
+        type: string
+      sort:
+        type: string
+    type: object
+  clean-web-api_api_helper.BaseHttpResponse:
     properties:
       error: {}
       result: {}
@@ -86,10 +168,10 @@ definitions:
         type: boolean
       validationErrors:
         items:
-          $ref: '#/definitions/validation.ValidationError'
+          $ref: '#/definitions/clean-web-api_api_validation.ValidationError'
         type: array
     type: object
-  validation.ValidationError:
+  clean-web-api_api_validation.ValidationError:
     properties:
       message:
         type: string
@@ -103,6 +185,157 @@ definitions:
 info:
   contact: {}
 paths:
+  /v1/countries/:
+    post:
+      consumes:
+      - application/json
+      description: Create a country
+      parameters:
+      - description: Create a country
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/clean-web-api_api_dto.CreateUpdateCountryRequest'
+      responses:
+        "201":
+          description: Country response
+          schema:
+            allOf:
+            - $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/clean-web-api_api_dto.CountryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Create a country
+      tags:
+      - Countries
+  /v1/countries/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete a country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: response
+          schema:
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Delete a country
+      tags:
+      - Countries
+    get:
+      consumes:
+      - application/json
+      description: Get a country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Country response
+          schema:
+            allOf:
+            - $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/clean-web-api_api_dto.CountryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get a country
+      tags:
+      - Countries
+    put:
+      consumes:
+      - application/json
+      description: Update a country
+      parameters:
+      - description: Id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Update a country
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/clean-web-api_api_dto.CreateUpdateCountryRequest'
+      responses:
+        "200":
+          description: Country response
+          schema:
+            allOf:
+            - $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/clean-web-api_api_dto.CountryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Update a country
+      tags:
+      - Countries
+  /v1/countries/get-by-filter:
+    post:
+      consumes:
+      - application/json
+      description: Get Countries
+      parameters:
+      - description: Request
+        in: body
+        name: Request
+        required: true
+        schema:
+          $ref: '#/definitions/clean-web-api_api_dto.PaginationInputWithFilter'
+      responses:
+        "200":
+          description: Country response
+          schema:
+            allOf:
+            - $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+            - properties:
+                result:
+                  $ref: '#/definitions/clean-web-api_api_dto.PagedList-clean-web-api_api_dto_CountryResponse'
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
+      security:
+      - AuthBearer: []
+      summary: Get Countries
+      tags:
+      - Countries
   /v1/health/:
     get:
       consumes:
@@ -114,11 +347,11 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "400":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
       summary: Health Check
       tags:
       - health
@@ -133,7 +366,7 @@ paths:
         name: person
         required: true
         schema:
-          $ref: '#/definitions/handlers.personData'
+          $ref: '#/definitions/api_handlers.personData'
       produces:
       - application/json
       responses:
@@ -141,14 +374,14 @@ paths:
           description: Success
           schema:
             allOf:
-            - $ref: '#/definitions/helper.BaseHttpResponse'
+            - $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
             - properties:
                 validationErrors: {}
               type: object
         "400":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
       security:
       - AuthBearer: []
       summary: BodyBinder
@@ -171,11 +404,11 @@ paths:
         "200":
           description: Success
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "400":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
       summary: UserById
       tags:
       - Test
@@ -190,22 +423,22 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/dto.RegisterLoginByMobileRequest'
+          $ref: '#/definitions/clean-web-api_api_dto.RegisterLoginByMobileRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Success
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "400":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "409":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
       summary: RegisterLoginByMobileNumber
       tags:
       - Users
@@ -220,22 +453,22 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/dto.LoginByUsernameRequest'
+          $ref: '#/definitions/clean-web-api_api_dto.LoginByUsernameRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Success
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "400":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "409":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
       summary: LoginByUsername
       tags:
       - Users
@@ -250,22 +483,22 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/dto.RegisterUserByUsernameRequest'
+          $ref: '#/definitions/clean-web-api_api_dto.RegisterUserByUsernameRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Success
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "400":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "409":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
       summary: RegisterByUsername
       tags:
       - Users
@@ -280,22 +513,22 @@ paths:
         name: Request
         required: true
         schema:
-          $ref: '#/definitions/dto.GetOtpRequest'
+          $ref: '#/definitions/clean-web-api_api_dto.GetOtpRequest'
       produces:
       - application/json
       responses:
         "201":
           description: Success
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "400":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
         "409":
           description: Failed
           schema:
-            $ref: '#/definitions/helper.BaseHttpResponse'
+            $ref: '#/definitions/clean-web-api_api_helper.BaseHttpResponse'
       summary: Send otp to user
       tags:
       - Users
